compatible with head of SAGA CVS on 29/10/2007