@@ -1,7 +1,7 @@
 package fr.in2p3.jsaga.command;
 
 import org.apache.commons.cli.*;
-import org.ogf.saga.URI;
+import org.ogf.saga.URL;
 import org.ogf.saga.error.*;
 import org.ogf.saga.logicalfile.LogicalFile;
 import org.ogf.saga.namespace.*;
@@ -9,7 +9,6 @@ import org.ogf.saga.session.Session;
 import org.ogf.saga.session.SessionFactory;
 
 import java.lang.Exception;
-import java.net.URISyntaxException;
 
 /* ***************************************************
 * *** Centre de Calcul de l'IN2P3 - Lyon (France) ***
@@ -30,7 +29,7 @@ public class NamespaceLogical extends AbstractCommand {
     private static final String OPT_LIST = "l", LONGOPT_LIST = "list";
 
     public NamespaceLogical() {
-        super("jsaga-logical", new String[]{"Logical URI"}, new String[]{OPT_HELP, LONGOPT_HELP});
+        super("jsaga-logical", new String[]{"Logical URL"}, new String[]{OPT_HELP, LONGOPT_HELP});
     }
 
     public static void main(String[] args) throws Exception {
@@ -45,39 +44,34 @@ public class NamespaceLogical extends AbstractCommand {
         else if (line.hasOption(OPT_REGISTER))
         {
             LogicalFile file = command.getLogicalFile();
-            file.addLocation(new URI(line.getOptionValue(OPT_REGISTER)));
-            file.close(0.0f);
+            file.addLocation(new URL(line.getOptionValue(OPT_REGISTER)));
+            file.close();
         }
         else if (line.hasOption(OPT_UNREGISTER))
         {
             LogicalFile file = command.getLogicalFile();
-            file.removeLocation(new URI(line.getOptionValue(OPT_REGISTER)));
-            file.close(0.0f);
+            file.removeLocation(new URL(line.getOptionValue(OPT_REGISTER)));
+            file.close();
         }
         else if (line.hasOption(OPT_LIST))
         {
             LogicalFile file = command.getLogicalFile();
-            for (URI location : file.listLocations()) {
+            for (URL location : file.listLocations()) {
                 System.out.println(location);
             }
-            file.close(0.0f);
+            file.close();
         }
     }
 
-    private LogicalFile getLogicalFile() throws NotImplemented, IncorrectURL, IncorrectSession, AuthenticationFailed, AuthorizationFailed, PermissionDenied, BadParameter, DoesNotExist, Timeout, NoSuccess, IncorrectState, AlreadyExists {
-        URI logicalUri;
-        try {
-            logicalUri = new URI(m_nonOptionValues[0]);
-        } catch (URISyntaxException e) {
-            throw new IncorrectURL(e);
-        }
+    private LogicalFile getLogicalFile() throws NotImplemented, IncorrectURL, AuthenticationFailed, AuthorizationFailed, PermissionDenied, BadParameter, DoesNotExist, Timeout, NoSuccess, IncorrectState, AlreadyExists {
+        URL logicalUrl = new URL(m_nonOptionValues[0].replaceAll(" ", "%20"));
         Session session = SessionFactory.createSession(true);
-        NamespaceEntry entry = NamespaceFactory.createNamespaceEntry(session, logicalUri, Flags.NONE);
+        NSEntry entry = NSFactory.createNSEntry(session, logicalUrl, Flags.NONE.getValue());
         if (entry instanceof LogicalFile) {
             LogicalFile file = (LogicalFile) entry;
             return file;
         } else {
-            throw new BadParameter("Provided URI is not a logical file: "+logicalUri);
+            throw new BadParameter("Provided URL is not a logical file: "+logicalUrl);
         }
     }
 
@@ -91,17 +85,17 @@ public class NamespaceLogical extends AbstractCommand {
             group.addOption(OptionBuilder.withDescription("Display this help and exit")
                     .withLongOpt(LONGOPT_HELP)
                     .create(OPT_HELP));
-            group.addOption(OptionBuilder.withDescription("Register replica <Physical URI>")
+            group.addOption(OptionBuilder.withDescription("Register replica <Physical URL>")
                     .hasArg()
-                    .withArgName("Physical URI")
+                    .withArgName("Physical URL")
                     .withLongOpt(LONGOPT_REGISTER)
                     .create(OPT_REGISTER));
-            group.addOption(OptionBuilder.withDescription("Unregister replica <Physical URI>")
+            group.addOption(OptionBuilder.withDescription("Unregister replica <Physical URL>")
                     .hasArg()
-                    .withArgName("Physical URI")
+                    .withArgName("Physical URL")
                     .withLongOpt(LONGOPT_UNREGISTER)
                     .create(OPT_UNREGISTER));
-            group.addOption(OptionBuilder.withDescription("List replicas <Physical URI>")
+            group.addOption(OptionBuilder.withDescription("List replicas <Physical URL>")
                     .withLongOpt(LONGOPT_LIST)
                     .create(OPT_LIST));
         }
